--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <span class="logo-icon" ><img src="preview.png" width="45px"></span>
+      <span class="logo-icon" ><img src="preview1.png" width="45px"></span>
       <span class="logo-text">Calculator</span>
     </div>
     <nav class="nav1">
