--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <span class="logo-icon" ><img src="preview.png" width="45px"></span>
+      <span class="logo-icon" ><img src="preview1.png" width="45px"></span>
       <span class="logo-text">About</span>
     </div>
     <nav class="nav1">
