--- a/index1.html
+++ b/index1.html
@@ -34,6 +34,15 @@
         <span class="span1">Kelas: XII RPL 3</span>
         <span class="span1">NIS: 22230327</span>
         <span class="span1">No. Absen: 11</span>
+        <span class="span3">Education</span>
+        <div class="educ">
+          <img src="preview1.png" width="70px">
+          <span class="degree-text"><span class="deg">Degree:</span> <br> <span class="rpl"><b>Rekayasa Perangkat Lunak</b></span><br><span class="smk"><b>SMK TARUNA BANGSA</b></span></span>
+        </div>
+        <div class="teach">
+          <span class="deg1">Mathematics Educator:</span><br>
+          <span class="spd"><strong>Giri Priyono,S.Pd.,MM.</strong></span>
+        </div>
     </div>
 </div>
 
